# Python-Summarizer-CLI

py-summarizer-cli/: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
py-summarizer-cli/src/cli_tool/: __init__.py  __version__.py  io_utils.py  main.py  openai_client.py  summarizer.py
py-summarizer-cli/tests/: __init__.py  test_cli.py  test_summarizer.py
py-summarizer-cli/tests/fixtures/: sample.txt
