[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py-summarizer-cli"
version = "1.0.0"
description = "A Python CLI tool for text summarization and insight extraction"
authors = [{name = "danishirfan21", email = "danish-khawaja@hotmail.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
dev = ["pytest>=7.0.0", "pytest-cov"]

[project.scripts]
summarize = "cli_tool.main:main"

[project.urls]
Homepage = "https://github.com/danishirfan21/Python-Summarizer-CLI"
Repository = "https://github.com/danishirfan21/Python-Summarizer-CLI"
Issues = "https://github.com/danishirfan21/Python-Summarizer-CLI/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]